--- a/.github/workflows/all.yaml
+++ b/.github/workflows/all.yaml
@@ -7,6 +7,9 @@ defaults:
   run:
     shell: bash
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -20,10 +23,8 @@ jobs:
       - name: Build
         run: |
           go run build/main.go
-      - uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./k6
-          asset_name: k6
+          generate_release_notes: true
+          files: k6
